// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@body with a scope and a route with \`.dump()\` 1`] = `
User {
  "email": "test@example.com",
  "password": "asdfsadf",
  "username": "testtest",
}
`;

exports[`@body with a scope and a route with \`.dump()\` 2`] = `
User {
  "email": "test@example.com",
  "password": "asdfsadf",
}
`;

exports[`The hyrest middleware throws an error if no wrapper function was used 1`] = `
Array [
  Array [
    [Error: Route did not return an answer. Make sure the return value is wrapped properly.],
  ],
]
`;
